# dapo

./: .gitignore  LICENSE  README.md  data_visualization.py  main.py  pyproject.toml  test_data.py
.github/workflows/: tests.yml
dapo/: __init__.py
dapo.egg-info/: PKG-INFO  SOURCES.txt
dapo/core/: csv_utils.py  data_column.py  datakit.py  json_utils.py  toon_utils.py
dapo/docs/: Documentation.md
dapo/utils/: csv_utils.py  toon_utils.py
docs/: Documentation.md
examples/: main.py
examples/datasets/: example_data.py  job_descriptions_small.csv  jobs.json  jobs.toon
examples/example_out/: output.csv
tests/: test_dapo.py  test_io.py
