[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dapo"
version = "0.1.2"
authors = [
  { name="Matvei Pisarev", email="matveypisarev.edu@gmail.com" },
]
description = "Simple, zero-dependency tabular data manipulation and analysis for Python."
readme = "README.md"
requires-python = ">=3.6"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["data", "analysis", "tabular", "csv", "json"]

[project.urls]
"Homepage" = "https://github.com/mapi-developer/dapo"
"Bug Tracker" = "https://github.com/mapi-developer/dapo/issues"

# This section ensures only the 'dapo' folder is packed, ignoring tests/examples
[tool.setuptools.packages.find]
include = ["dapo*"]